k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusajs-production
  labels:
    app.kubernetes.io/part-of: medusajs
    environment: production
